# 2024sdjh

./: README.md
day1/: CMakeLists.txt  day1.md  doxygen.cpp  gtest.cpp  main
day1/doxygen/html/: doxygen_8cpp.html  globals.html
day1/doxygen/html/search/: all_4.js  pages_0.js  searchdata.js
day1/doxygen/latex/: md_day1.tex
day1/html/: doxygen_crawl.html  files.html  globals_func.html  md_day1.html  pages.html
day1/html/search/: all_1.js  all_3.js
day1/latex/: doxygen_8cpp.tex  files.tex  refman.tex
day2/: day2.md  main
day3/: day3.md  main
day4/: day4.md
day5/: day5.md
day6/: day6.md
